--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.3",
     "apollo-server-lambda": "^2.9.3",
     "axios": "^0.19.0",
