added json-server for user mock-server

--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
 functions:
   graphql:
     # this is formatted as <FILENAME>.<HANDLER>
-    handler: graphql.graphqlHandler
+    handler: server.graphqlHandler
     events:
     - http:
         path: graphql
