--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon graphql.js"
+    "server": "nodemon server.js --ignore db.json",
+    "db":"json-server --watch db.json"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "graphql": "^14.5.4"
   },
   "devDependencies": {
+    "json-server": "^0.15.1",
     "nodemon": "^1.19.1"
   }
 }
