--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js --ignore db.json",
-    "db":"json-server --watch db.json"
+    "db": "json-server --watch db.json"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-datasource-rest": "^0.6.4",
+    "apollo-errors": "^1.9.0",
     "apollo-server": "^2.9.3",
     "apollo-server-lambda": "^2.9.3",
     "axios": "^0.19.0",
-    "graphql": "^14.5.4"
+    "bcrypt": "^3.0.6",
+    "graphql": "^14.5.4",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "json-server": "^0.15.1",
